# nomad-docs-crc1415

./: pyproject.toml
examples/data/crc1415_tutorial/: CRC1415Colors.py  CRC1415Tutorial.ipynb  README.md  sampleInput.csv  sampleInput.xlsx  styleCRC1415.mplstyle
howto/develop/: setup.html
howto/plugins/: apps.html
reference/: config.html  plugins.html
search/: search_index.json
tutorial/: develop_plugin.html
