[project]
name = "nomad-docs"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ahmed Ilyas", email = "ahmed.n.ilyas@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    'nomad-lab @ git+https://gitlab.hrz.tu-chemnitz.de/s5440027-at-tu-dresden.de/nomad-lab.git@0753d0226541538c0f6aad2c6ba6cd0b7f92eea7',
    'mkdocs-click',
    'mkdocs-git-revision-date-localized-plugin',
    'mkdocs-glightbox',
    'mkdocs-macros-plugin',
    'mkdocs-material-extensions',
    'mkdocs-material',
    'mkdocs-redirects',
    "mkdocs",
    "pydantic>=2.0",
]

[tool.uv]
extra-index-url = [
]

[build-system]
requires = ["uv_build>=0.7.3,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-exclude = ["docs/**"]

[dependency-groups]
dev = ["pytest>=7.4.4"]
